fix meta tags on mobile

--- a/remark-container-styles.css
+++ b/remark-container-styles.css
@@ -20,7 +20,8 @@
 /* apply variables to admonitions */
 
 .admonition {
-    width: max-content
+    width: max-content;
+    max-width: 100%;
 }
 
 .admonition time::after {
